RP: target java version 8 for the oxygen java extension